--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,6 +1,8 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="a561cf">  <td>25/01/25 16:57:08</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="RemoteSetUp.setUp()[pri:0, instance:BaseTest.RemoteSetUp@659a969b]">setUp</td> 
+<tr bgcolor="a561cf">  <td>25/01/25 20:23:28</td>   <td>0</td> <td title="&gt;&gt;HomePageRightTest.setUp()[pri:0, instance:BaseTest.HomePageRightTest@636be97c]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@498931366</td>   <td></td> </tr>
+<tr bgcolor="a561cf">  <td>25/01/25 20:23:38</td>   <td>10158</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageRightTest.testAlerts()[pri:0, instance:BaseTest.HomePageRightTest@636be97c]">testAlerts</td> 
   <td>main@498931366</td>   <td></td> </tr>
 </table>
